--- a/index.html
+++ b/index.html
@@ -1,2 +1,10 @@
 <html>
-<title>FandomEasy<
+  <title>FandomEasy</title>
+  <body bgcolor="grey">
+  <img src="logo.jpg" align="center">
+  <a href="harrypotterpage.html"><img src="Harry-Potter-Logo-2-1200.jpg" align="left" width="300" height="300"></a>
+  <a href="pjopage.html"><img src="percy jackson @github.jpg" align="center" width="300" height="300"></a>
+  <a href="HOOpage.html"><img src="HOO @github.png" align="right" width="300" height="300"></a>
+  <a href="TMIpage.html"><img src="TMI @github.jpg" align="left" width="300" height="300"></a>
+  <a href="infernadevicespage.html"><img src="infernal devices @github.jpg" align="center" width="300" height="300"></a>
+</html>
