--- a/harrypotterpage.html
+++ b/harrypotterpage.html
@@ -1,5 +1,6 @@
 <html>
 <title>Harry Potter</title>
+  <a href="index.html"> <img src="arrow.png" width="75" height="75"> <a>
 <h2>Harry Potter Library</h2>
 <a href="HPsass.html"> <img src="HPfanart.jpeg" width="300" height="300"> </a>
 <a href="HPlol.html"> <img src="HPfanart2.jpeg" width="300" height="300"> </a>
