--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <html>
-  <title>FandomEasy</title>
+  <title>Fandom Library</title>
   <body bgcolor="grey">
   <img src="logo.jpg" align="center">
   <a href="harrypotterpage.html"><img src="Harry-Potter-Logo-2-1200.jpg" align="left" width="300" height="300"></a>
