--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
   <title>Fandom Library</title>
   <body bgcolor="grey">
-  <img src="logo.png" align="center">
+  <img src="logo.png" align="center" height="126" width="264">
   <a href="harrypotterpage.html"><img src="Harry-Potter-Logo-2-1200.jpg" align="left" width="300" height="300"></a>
   <a href="pjopage.html"><img src="percy jackson @github.jpg" align="center" width="300" height="300"></a>
   <a href="HOOpage.html"><img src="HOO @github.png" align="right" width="300" height="300"></a>
